<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileViewActivity">

    <include layout="@layout/toolbar_profile_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textFullName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/full_name"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textFullName2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/textFullName1"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEMail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFullName1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/e_mail_address"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEMail2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFullName2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/textEMail1"
            android:textColor="@color/startColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMobileNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEMail1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/mobile_number"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMobileNumber2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEMail2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/textMobileNumber1"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textGender1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textMobileNumber1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/gender"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textGender2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textMobileNumber2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/textGender1"
            android:textColor="@color/startColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners"
        android:drawableEnd="@drawable/ic_baseline_logout_24"
        android:text="@string/logOut"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>